--- a/index.css
+++ b/index.css
@@ -1,334 +1,122 @@
-html {
-    font-size: 62.5%;
-}
+/*
+	Reset the spacing between browser border and site content
+*/
 
 body {
-    font-size: 1.4rem;
-}
-
-
-/* =14px */
-
-h1 {
-    font-size: 2.4rem;
-}
-
-
-/* =24px */
-
-.container__item {
-    margin: 0 auto 40px;
-}
-
-.landing-page-container {
-    width: 100%;
-    min-height: 100%;
-    height: 90rem;
-    background-image: url("https://s29.postimg.org/vho8xb2pj/landing_bg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom;
-    overflow: hidden;
-    font-family: 'Montserrat', sans-serif;
-    color: #09383E;
-}
-
-.content__wrapper {
-    max-width: 1200px;
-    width: 90%;
-    height: 100%;
-    margin: 0 auto;
-    position: relative;
-}
-
-.header {
-    width: 100%;
-    height: 2rem;
-    padding: 4.5rem 0;
-    display: block;
-}
-
-.menu-icon {
-    width: 2.5rem;
-    height: 1.5rem;
-    display: inline-block;
-    cursor: pointer;
-}
-
-.header__item {
-    display: inline-block;
-    float: left;
-}
-
-.menu-icon__line {
-    width: 1.5rem;
-    height: 0.2rem;
-    background-color: #0C383E;
-    display: block;
-}
-
-.menu-icon__line:before,
-.menu-icon__line:after {
-    content: '';
-    width: 1.5rem;
-    height: 0.2rem;
-    background-color: #0C383E;
-    display: inline-block;
-    position: relative;
-}
-
-.menu-icon__line:before {
-    left: 0.5rem;
-    top: -0.6rem;
-}
-
-.menu-icon__line:after {
-    top: -1.8rem;
-}
-
-.heading {
-    width: 90%;
-    font-size: 2rem;
-    font-weight: bold;
     margin: 0;
-    line-height: 1.7rem;
+}
+
+
+/*
+	Basic setup for the different sections of the site
+*/
+
+.section {
+    width: 100%;
+    height: 1000px;
+    overflow: hidden;
+}
+
+.section-1 {
+    background: url(bg1.png) fixed;
+}
+
+.section-2 {
+    background: url(bg2.png) fixed;
+}
+
+.section-3 {
+    background: url(bg3.png) fixed;
+}
+
+
+/*
+	Setup for the objects that will act as layers
+*/
+
+.obj-wrapper {
+    width: 960px;
     margin: 0 auto;
+}
+
+.obj {
+    background: #fff;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, .2);
+    border: 1px solid #bbb;
+    width: 100px;
+    height: 100px;
     text-align: center;
-}
-
-.social-container {
-    width: 7.25rem;
-    list-style: none;
-    overflow: hidden;
-    padding: 0;
-    margin: 0;
-    float: right;
-}
-
-.social-container .social__icon {
-    width: 1.5rem;
-    float: left;
-    cursor: pointer;
-}
-
-.social-container .social__icon.social__icon--dr {
-    margin-left: 1.25rem;
-}
-
-.social-container .social__icon.social__icon--in {
-    margin-left: 1.5rem;
-}
-
-.social-container .social__icon.social__icon--fb img {
-    margin: 0 0.25rem;
-}
-
-.coords {
-    font-size: 1rem;
-    display: inline-block;
-    -webkit-transform: rotate(-90deg) translateY(50%);
-    transform: rotate(-90deg) translateY(50%);
-    float: left;
-    position: relative;
-    top: 40%;
-    letter-spacing: 0.2rem;
-    left: -11.5rem;
-    margin: 0;
-}
-
-.ellipses-container {
-    width: 50rem;
-    height: 50rem;
-    border-radius: 50%;
-    margin: 0 auto;
-    position: relative;
-    top: 10.5rem;
-}
-
-.ellipses-container .greeting {
-    position: absolute;
-    top: 11.6rem;
-    left: 13rem;
-    right: 0;
-    margin: 0 auto;
     text-transform: uppercase;
-    letter-spacing: 4rem;
-    font-size: 2.2rem;
-    font-weight: 400;
-    opacity: 0.5;
+    font: 14px/100px sans-serif;
 }
 
-.ellipses-container .greeting:after {
-    content: '';
-    width: 0.3rem;
-    height: 0.3rem;
-    border-radius: 50%;
-    display: inline-block;
-    background-color: #0C383E;
-    position: relative;
-    top: -0.65rem;
-    left: -5.05rem;
+
+/* Section 1 */
+
+.section-1 .obj-1 {
+    margin: 120px 0 0 250px;
+    width: 400px;
 }
 
-.ellipses {
-    border-radius: 50%;
-    position: absolute;
-    top: 0;
-    border-style: solid;
+.section-1 .obj-2 {
+    margin: 250px 0 0 300px;
+    width: 300px;
+    height: 400px;
 }
 
-.ellipses__outer--thin {
-    width: 100%;
-    height: 100%;
-    border-width: 1px;
-    border-color: rgba(9, 56, 62, 0.1);
-    -webkit-animation: ellipsesOrbit 15s ease-in-out infinite;
-    animation: ellipsesOrbit 15s ease-in-out infinite;
+.section-1 .obj-3 {
+    margin: 350px 0 0 550px;
+    width: 200px;
 }
 
-.ellipses__outer--thin:after {
-    content: "";
-    background-image: url("https://s29.postimg.org/5h0r4ftkn/ellipses_dial.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    opacity: 0.15;
+.section-1 .obj-4 {
+    margin: 500px 0 0 250px;
 }
 
-.ellipses__outer--thick {
-    width: 99.5%;
-    height: 99.5%;
-    border-color: #09383E transparent;
-    border-width: 2px;
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    -webkit-animation: ellipsesRotate 15s ease-in-out infinite;
-    animation: ellipsesRotate 15s ease-in-out infinite;
+
+/* Section 2 */
+
+.section-2 .obj-1 {
+    margin: 400px 0 0 200px;
+    width: 500px;
+    height: 50px;
+    line-height: 50px;
 }
 
-.ellipses__orbit {
-    width: 2.5rem;
-    height: 2.5rem;
-    border-width: 2px;
-    border-color: #09383E;
-    top: 5rem;
-    right: 6.75rem;
+.section-2 .obj-2 {
+    margin: 300px 0 0 350px;
+    width: 300px;
+    height: 200px;
+    line-height: 200px;
 }
 
-.ellipses__orbit:before {
-    content: '';
-    width: 0.7rem;
-    height: 0.7rem;
-    border-radius: 50%;
-    display: inline-block;
-    background-color: #09383E;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+.section-2 .obj-3 {
+    margin: 200px 0 0 450px;
 }
 
-.scroller {
-    width: 7.5rem;
-    display: inline-block;
-    float: right;
-    position: relative;
-    top: -15%;
-    -webkit-transform: translateY(50%);
-    transform: translateY(50%);
-    overflow: hidden;
+.section-2 .obj-4 {
+    margin: 400px 0 0 600px;
 }
 
-.scroller .page-title {
-    font-family: 'Playfair Display', serif;
-    letter-spacing: 0.5rem;
-    display: inline-block;
-    float: left;
-    margin-top: 1rem;
+
+/* Section 3 */
+
+.section-3 .obj-1 {
+    margin: 500px 0 0 400px;
+    width: 300px;
 }
 
-.scroller .timeline {
-    width: 1.5rem;
-    height: 9rem;
-    display: inline-block;
-    float: right;
+.section-3 .obj-2 {
+    margin: 400px 0 0 300px;
+    width: 200px;
 }
 
-.scroller .timeline .timeline__unit {
-    width: 100%;
-    height: 0.1rem;
-    display: block;
-    background-color: #0C383E;
-    margin: 0 0 2rem;
-    opacity: 0.2;
+.section-3 .obj-3 {
+    margin: 350px 0 0 430px;
+    height: 400px;
+    line-height: 400px;
 }
 
-.scroller .timeline .timeline__unit.timeline__unit--active {
-    opacity: 1;
-}
-
-.scroller .timeline .timeline__unit.timeline__unit--active:after {
-    opacity: 0.2;
-}
-
-.scroller .timeline .timeline__unit:after {
-    content: '';
-    width: 70%;
-    height: 0.1rem;
-    display: block;
-    position: relative;
-    float: right;
-    background-color: #0C383E;
-    top: 1rem;
-}
-
-@-webkit-keyframes ellipsesRotate {
-    0% {
-        -webkit-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-    }
-    100% {
-        -webkit-transform: rotate(-405deg);
-        transform: rotate(-405deg);
-    }
-}
-
-@keyframes ellipsesRotate {
-    0% {
-        -webkit-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-    }
-    100% {
-        -webkit-transform: rotate(-405deg);
-        transform: rotate(-405deg);
-    }
-}
-
-@-webkit-keyframes ellipsesOrbit {
-    0% {
-        -webkit-transform: rotate(0);
-        transform: rotate(0);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes ellipsesOrbit {
-    0% {
-        -webkit-transform: rotate(0);
-        transform: rotate(0);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
+.section-3 .obj-4 {
+    margin: 600px 0 0 340px;
 }
